--- a/Journal 4.html
+++ b/Journal 4.html
@@ -624,9 +624,7 @@ Each woman in Three Voices speaks from a distinct position. One draws from relig
 
 This is where the parallel to Marie Curie becomes most meaningful. Curie worked in a scientific world that questioned her presence, yet she continued her pursuit of truth with unwavering resolve. The women in the film pursue a different kind of truth, one shaped by lived experience, ethical responsibility, and community well-being. Curie revealed the hidden world of atoms, while these women reveal the hidden burdens carried by those who suffer in silence. Both show that insight begins with the willingness to understand rather than to fear.<br><br>
 
-In the end, Three Voices is not a story about dramatic transformation, but about the quiet ways change begins. The film shows that even small shifts in conversation, interpretation, and awareness can alter the social landscape. This echoes Curie’s own steady and persistent approach to discovery. Both Curie and the women in the film remind me that progress often begins with a single determined step taken by someone who refuses to accept that the world must remain unchanged.<br><br>
-
-Both Curie and the women in this film remind me that a woman’s rise is not defined by ease or recognition. It is a quiet, persistent transformation that changes the world from within.</h3>
+In the end, Three Voices is not a story about dramatic transformation, but about the quiet ways change begins. The film shows that even small shifts in conversation, interpretation, and awareness can alter the social landscape. This echoes Curie’s own steady and persistent approach to discovery. Both Curie and the women in the film remind me that progress often begins with a single determined step taken by someone who refuses to accept that the world must remain unchanged. This film remind me that a woman’s rise is not defined by ease or recognition. It is a quiet, persistent transformation that changes the world from within.</h3>
 </div>
 </div>
 </div>
